Fix the Dock overflow issues.

--- a/src/components/App/AppComponent.css
+++ b/src/components/App/AppComponent.css
@@ -11,9 +11,9 @@ body {
 }
 
 .sidebar {
-
 }
 
 .child {
   flex: 1;
+  max-width: 80%
 }
